--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "redwoodjs-react-query-provider": "^0.1.2",
