Feat : 글 페이지 디테일 작업 중

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,9 @@
       ],
       "@core/*": [
         "./core/*"
+      ],
+      "@pages/*": [
+        "./pages/*"
       ]
     },
     "plugins": [
@@ -57,6 +60,7 @@
     "**/*.tsx",
     "pages/api/orm.js",
     "pages/404.js",
+    "**/pages/*", 
     ".next/types/**/*.ts"
   ],
   "exclude": [
