--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@toast-ui/editor": "^3.2.2",
+    "json-server": "^0.17.4",
     "next": "13.5.4",
     "next-auth": "^4.24.3",
     "react": "^18",
