--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@toast-ui/editor": "^3.2.2",
+    "@toast-ui/react-editor": "^3.2.3",
+    "@uiw/react-md-editor": "^3.6.0",
+    "character-entities-legacy": "^3.0.0",
     "json-server": "^0.17.4",
     "next": "13.5.4",
     "next-auth": "^4.24.3",
+    "next-remove-imports": "^1.0.12",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
