--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-remove-imports": "^1.0.12",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
