Feat : 메인 페이지 리뉴얼 중

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@toast-ui/react-editor": "^3.2.3",
     "@uiw/react-md-editor": "^3.6.0",
     "character-entities-legacy": "^3.0.0",
+    "graphql": "^16.8.1",
     "json-server": "^0.17.4",
     "next": "13.5.4",
     "next-auth": "^4.24.3",
@@ -24,7 +25,8 @@
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "redwoodjs-react-query-provider": "^0.1.2",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/node": "^20",
